--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: twitter_client
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
+version: 0.0.0
 # homepage: https://www.example.com
+homepage: https://youtube.com/@azkadev
+repository: https://github.com/azkadev
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
