--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: twitter_client
-description: A starting point for Dart libraries or applications.
-version: 0.0.0
-# homepage: https://www.example.com
+description: A Twitter Client library cross platform support and easy to use.
+version: 0.0.1
 homepage: https://youtube.com/@azkadev
 repository: https://github.com/azkadev
 
@@ -15,4 +14,5 @@ dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
 dependencies:
+  galaxeus_lib: ^0.0.31
   twitter_api_v2: ^4.6.0
