--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: twitter_client
 description: A Twitter Client library cross platform support and easy to use.
-version: 0.0.4
+version: 0.0.5
 homepage: https://youtube.com/@azkadev
 repository: https://github.com/azkadev
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.19.0 <3.0.0'
 
 # dependencies:
 #   path: ^1.8.0
@@ -14,5 +14,6 @@ dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
 dependencies:
-  galaxeus_lib: ^0.0.40
+  galaxeus_lib: ^0.0.60
   twitter_api_v2: ^4.9.4
+  universal_io: ^2.2.0
